Bug 537230 part.1 Paint connection of complex style decoration lines smoothly r=roc